[package]
name = "mssg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
camino = "1.1.6"
clap = { version = "4.5.4", features = ["derive"] }
either = "1.11.0"
handlebars = { version = "5.1.2", features = ["dir_source"] }
itertools = "0.12.1"
lazy-regex = "3.1.0"
pulldown-cmark = { git = "https://github.com/pulldown-cmark/pulldown-cmark.git", branch = "branch_0.11", features = ["html"] }
pulldown-cmark-escape = "0.10.1"
sass-rs = "0.2.2"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
serde_merge = "0.1.3"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
syntect = "5.2.0"
syntect-assets = "0.23.6"
tempfile = "3.10.1"
url-escape = "0.1.1"
wax = "0.6.0"
